reduced animation time between pages, fixed nav mobile scroll on small heights, added scroll to top on every page render

--- a/src/index.css
+++ b/src/index.css
@@ -3,58 +3,63 @@
 @tailwind utilities;
 
 * {
-  @apply text-white font-base
+  @apply text-white font-base;
 }
 
 svg {
-  @apply cursor-pointer
+  @apply cursor-pointer;
 }
 
 .flex-center {
-  @apply flex justify-center items-center
+  @apply flex justify-center items-center;
 }
 
 .head-text {
-  @apply text-2xl font-bold text-[#EFEEE0]
+  @apply text-2xl font-bold text-[#EFEEE0];
 }
 
 .app__nav-icon-active .app__nav-icon {
-  @apply !fill-primary
+  @apply !fill-primary;
 }
 
 .app__nav-icon {
-  @apply w-[28px] h-[28px] lg:w-[22px] lg:h-[22px] cursor-pointer fill-[rgba(239,238,224,0.25)] lg:hover:fill-[rgba(239,238,224,0.6)] transition-all duration-300 
+  @apply w-[28px] h-[28px] lg:w-[22px] lg:h-[22px] cursor-pointer fill-[rgba(239,238,224,0.25)] lg:hover:fill-[rgba(239,238,224,0.6)] transition-all duration-300;
 }
 
 .app__nav-mobile {
-  @apply flex gap-x-6 items-center pointer-events-auto
+  @apply flex gap-x-6 items-center;
 }
 
 .app__nav-mobile:hover .app__nav-icon {
-  @apply fill-[rgba(239,238,224,0.6)]
+  @apply fill-[rgba(239,238,224,0.6)];
 }
 
 .app__nav-mobile:hover span {
-  @apply text-[rgba(239,238,224,0.6)]
+  @apply text-[rgba(239,238,224,0.6)];
 }
 
 .app__nav-mobile span {
-  @apply font-bold text-[18px] text-[rgba(239,238,224,0.25)] transition-all duration-300
+  @apply font-bold text-[18px] text-[rgba(239,238,224,0.25)] transition-all duration-300;
 }
 
 .app__nav-mobile.app__nav-icon-active span {
-  @apply text-light
+  @apply text-light;
 }
 
 @media screen and (max-width: 300px) {
   .app__nav-offcanvas {
-    @apply w-full
+    @apply w-full;
   }
 }
 
 @media screen and (min-width: 576px) {
   .app__album-underlay {
-    background-image: linear-gradient(to bottom, rgba(29,33,35,0.75) 0%, rgba(29,33,35,0.999) 80%), url('./assets/album-01.jpg');
+    background-image: linear-gradient(
+        to bottom,
+        rgba(29, 33, 35, 0.75) 0%,
+        rgba(29, 33, 35, 0.999) 80%
+      ),
+      url("./assets/album-01.jpg");
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -62,21 +67,26 @@ svg {
 
 @media screen and (max-width: 576px) {
   .app__album-underlay {
-    background-image: linear-gradient(to bottom, rgba(29,33,35,0.75) 0%, rgba(29,33,35,0.999) 50%), url('./assets/album-01.jpg');
+    background-image: linear-gradient(
+        to bottom,
+        rgba(29, 33, 35, 0.75) 0%,
+        rgba(29, 33, 35, 0.999) 50%
+      ),
+      url("./assets/album-01.jpg");
     background-repeat: no-repeat;
     background-size: cover;
   }
 }
 
 .app__color-dodge {
-  background: #7A9096;
+  background: #7a9096;
   mix-blend-mode: color-dodge;
   opacity: 0.45;
   filter: blur(25.5786px);
 }
 
 .collections-grid {
-  grid-template-columns: repeat(auto-fill ,minmax(220px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
 }
 
 .app__player {
@@ -85,42 +95,45 @@ svg {
 }
 
 .swiper-slide img {
-  @apply select-none
+  @apply select-none;
 }
 
 /* Player Sliders */
 .app__player-slider {
-  @apply py-2.5 -mb-2.5 bg-transparent
+  @apply py-2.5 -mb-2.5 bg-transparent;
 }
 
 .app__player-volume .MuiSlider-thumb {
-  @apply hidden
+  @apply hidden;
 }
 
-.app__player-slider .MuiSlider-rail, .app__player-slider .MuiSlider-track {
-  @apply h-1
+.app__player-slider .MuiSlider-rail,
+.app__player-slider .MuiSlider-track {
+  @apply h-1;
 }
 
-.app__player-volume .MuiSlider-rail, .app__player-volume .MuiSlider-track {
-  @apply h-[3px]
+.app__player-volume .MuiSlider-rail,
+.app__player-volume .MuiSlider-track {
+  @apply h-[3px];
 }
 
 .MuiSlider-rail {
-  @apply text-[rgba(255,255,255,0.1)]
+  @apply text-[rgba(255,255,255,0.1)];
 }
 
 .MuiSlider-track {
-  @apply text-primary
+  @apply text-primary;
 }
 
 .MuiSlider-thumb {
-  @apply text-primary !w-2 !h-2 hover:!shadow-none !shadow-none
+  @apply text-primary !w-2 !h-2 hover:!shadow-none !shadow-none;
 }
 
 .MuiSlider-thumb::after {
-  @apply !w-3 !h-3 !border !border-white transition-all duration-150
+  @apply !w-3 !h-3 !border !border-white transition-all duration-150;
 }
 
-.MuiSlider-thumb:hover::after, .MuiSlider-thumb:focus-within::after {
-  @apply !w-4 !h-4
+.MuiSlider-thumb:hover::after,
+.MuiSlider-thumb:focus-within::after {
+  @apply !w-4 !h-4;
 }
